@@ -33,7 +33,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 06 Feb 2009: Over 1000 new airports from <a href="http://ourairports.com">OurAirports</a> added.</a>
+	      <B>News</b>: 09 Feb 2009: <a href="http://apps.facebook.com/openflights">Facebook app</a> now includes a map of your flights!</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
