@@ -1,3 +1,8 @@
+<b>2009-02-09</b>
+
+* Facebook app now includes a map of flights
+* Bug: Facebook updates show airports in correct order
+
 <b>2009-02-06</b>
 
 * GAD replaced with OurAirports
